[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Select.wav" type="AudioStream" id=2]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
visible = false
position = Vector2( 728.846, 297.467 )
scale = Vector2( 2.95021, 2.10447 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_right = 256.0
margin_bottom = 30.0
rect_scale = Vector2( 5, 5 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Holy Beer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Show highscore" type="Label" parent="."]
anchor_right = 1.0
margin_top = 544.0
margin_right = 427.0
margin_bottom = 574.0
rect_scale = Vector2( 3, 3 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Highscore:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 505.0
margin_top = 271.0
margin_right = 625.0
margin_bottom = 302.0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Play"

[node name="fullscreen" type="Button" parent="."]
margin_left = 505.0
margin_top = 395.0
margin_right = 625.0
margin_bottom = 425.0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Fullscreen Off"

[node name="Quit" type="Button" parent="."]
margin_left = 505.0
margin_top = 475.0
margin_right = 625.0
margin_bottom = 505.0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Quit"

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
